Measure the benchmark in C#, Java and PHP
The remaining three supported languages now run the same contract as
JavaScript, Python and Go: parse every generated .lino with their own
links-notation implementation, count tokens with their own tokenizer, and fail
when a measurement disagrees with the Rust results.

All seven results files are now identical apart from the generator field.